--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "datocms-plugin-phonenumber",
-  "description": "A DatoCMS plugin that adds an input field with a country code selector for phone numbers. It outputs the formatted phone number as text, JSON, and a JavaScript object, making it easy to store and use in different formats.",
+  "name": "datocms-plugin-phone-number",
+  "description": "A DatoCMS plugin that adds an input field with a country code selector for phone numbers. It outputs the formatted phone number as text and JSON, making it easy to store and use in different formats.",
   "homepage": "https://github.com/voorhoede/datocms-plugin-phonenumber.git",
   "private": false,
   "version": "0.1.0",
@@ -10,7 +10,7 @@
     "datocms-plugin"
   ],
   "datoCmsPlugin": {
-    "title": "Phonenumber",
+    "title": "Phone-number",
     "coverImage": "docs/cover-1200x800.png",
     "previewImage": "docs/preview.mp4",
     "entryPoint": "dist/index.html",
