Add preview gif

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "datoCmsPlugin": {
     "title": "Phone Number",
     "coverImage": "docs/cover-1200x800.png",
-    "previewImage": "docs/preview.mp4",
+    "previewImage": "docs/preview.gif",
     "entryPoint": "dist/index.html",
     "permissions": []
   },
