Add cover image

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "datoCmsPlugin": {
     "title": "Phone Number",
-    "coverImage": "docs/cover-1200x800.png",
+    "coverImage": "docs/cover.png",
     "previewImage": "docs/preview.gif",
     "entryPoint": "dist/index.html",
     "permissions": []
