--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "1.0.2",
   "repository": {
     "type": "git",
-    "url": "https://github.com/voorhoede/datocms-plugin-phone-number.git"
+    "url": "git+https://github.com/voorhoede/datocms-plugin-phone-number.git"
   },
   "author": "Voorhoede",
   "license": "ISC",
